# rust-ecommerce

./: .env.example  Cargo.toml  README.md
src/: config.rs  errors.rs  main.rs
src/database/: mod.rs
src/handlers/: mod.rs
src/models/: cart.rs  category.rs  mod.rs  order.rs  product.rs  user.rs
