[package]
name = "rust-ecommerce"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
password-hash = "0.5"
argon2 = "0.5"
rand = "0.8"
envfile = "0.1"
once_cell = "1.19"
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"
rust_decimal = { version = "1.33", features = ["serde"] }
